feat: add default relation extraction pipeline
